Changes since version 1.5.1
---------------------------

- Freeze dictionaries now support indices. You can index on the
  full value of the dictionary, or on a member (when the value
  is a struct or a class). When you index on a member, you 
  can define several indices (for different members).
  See the Freeze bench demo and the Freeze dbmap test for examples.

- The Ice::Service class no longer resets the umask to 0, but rather
  uses the inherited umask.

- Fixed a code generation problem in slice2cpp. This problem showed
  up only for the --impl option.

- Changed the way C++ keywords are escaped. Previously, a Slice
  identifier that is a C++ keyword was escaped everywhere. For
  example, Slice "while" was mapped to "_cpp_while" and
  "_cpp_whilePrx". With the change, Slice "while" is mapped to
  "_cpp_while" and "whilePrx".

- Fixed the slice2java and slice2cs compilers for operations with
  multiple exceptions in an exception specification: if an exception
  was a base of one or more other exceptions in the same exception
  specification, the code generator sometimes emitted the catch
  blocks in the marshaling and dispatch code in the wrong order.
  (This applied only to interfaces with an ["amd"] metadata
  directive.)

- Fixed a bug in the slice2cs code generator:
  
  ["cs:collection"] sequence<Object> S1;
  ["cs:collection"] sequence<Object*> S2;

  Sequences of Object or Object* caused incorrect code to be
  generated if they were marked as "cs:collection".

- Fixed a bug in the slice2cs code generator: for nested sequences,
  incorrect code was generated if both the inner and the outer sequence
  were mapped as arrays.

- Fixed a number of bugs in slice2cs that caused incorrect code to
  be generated if C# keywords were used as Slice identifiers.

- Fixed a bug in slice2cpp that permitted impossible exceptions
  to be received by a client if client and server used Slice
  definitions with mismatched exception specifications. The